--- a/scss/style.scss
+++ b/scss/style.scss
@@ -379,6 +379,10 @@ ul {
       display: flex;
         justify-content: space-between;
     }
+    &--carousel {
+      display: flex;
+      overflow: hidden;
+    }
   }
 }
 
@@ -1225,6 +1229,11 @@ ul {
   background: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, .2);
   text-align: center;
+  &--carousel {
+    box-shadow: none;
+    margin-right: 10px;
+    min-width: 100%;
+  }
   &_title {
     @extend %subTitle;
     color: $fontColor-default;
